examples/test/testpolicy1078.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1078
  namespace: namespace297
spec:
  podSelector:
    matchLabels:
      key29: value27
      key11: value42
      key22: value47
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key41: value27
          key1: value17
      podSelector:
        matchLabels:
          key44: value40
          key14: value8
          key10: value47
